--- a/feedsidebar/chrome/locale/da-DK/locale.properties
+++ b/feedsidebar/chrome/locale/da-DK/locale.properties
@@ -24,3 +24,5 @@ feedbar.siteLink=Sitelink
 feedbar.publishedOn=Udgivet den %S på <a href="%S">%S</a>
 feedbar.previewHeader=Fra <a href="%S">%S</a>
 feedbar.download=Hent
+feedbar.trendBookmarkTitle=Seneste tendenser indenfor søgeord
+feedbar.trendBookmarkDescription=De seneste tendenser indenfor søgeord på Twitter, Digg og resten af det sociale net.
