--- a/feedsidebar/chrome/locale/de-DE/locale.properties
+++ b/feedsidebar/chrome/locale/de-DE/locale.properties
@@ -1,5 +1,7 @@
 extensions.feedbar@efinke.com.description=Stellt die ungelesenen Feed-Beiträge der dynamischen Lesezeichen in der Sidebar dar.
-feedbar.statusText=Aktualisiere %S von %S (%S)...
+# Updating 1 of 10 (Joe's Blog)
+
+feedbar.statusText=%S von %S (%S) werden aktualisiert...
 feedbar.noContent=Feed hat keinen Inhalt
 feedbar.errors.unavailable=Feed ist nicht erreichbar
 feedbar.errors.invalidFeed=Ungültiger Feed
@@ -21,6 +23,18 @@ feedbar.workingOffline=Derzeit offline
 feedbar.permalink=Permalink
 feedbar.feedLink=Feed
 feedbar.siteLink=Website
+# First %S is a date.
+
+# Second %S is a URL
+
+# Third %S is the feed name
+
 feedbar.publishedOn=Veröffentlicht am %S in <a href="%S">%S</a>
+# First %S is a URL
+
+# Second %S is a feed name
+
 feedbar.previewHeader=Von <a href="%S">%S</a>
-feedbar.download=Download
+feedbar.download=Herunterladen
+feedbar.trendBookmarkTitle=Aktuelle Suchtrends
+feedbar.trendBookmarkDescription=Die aktuellen Suchtrends auf Twitter, Digg und dem restlichen sozialen Netz
