--- a/feedsidebar/chrome/locale/fr-FR/locale.properties
+++ b/feedsidebar/chrome/locale/fr-FR/locale.properties
@@ -1,4 +1,6 @@
 extensions.feedbar@efinke.com.description=Panneau latéral listant les marque-pages dynamiques n'ayant pas été lus.
+feedbar.statusText=Mise à jour %S sur %S (%S)…
+feedbar.noContent=Le flux est vide.
 feedbar.errors.unavailable=Le flux n'est pas accessible
 feedbar.errors.invalidFeed=Le flux a un élément racine incorrect
 feedbar.errors.noFeedsFound=Aucun flux n'a été trouvé.
