--- a/feedsidebar/chrome/locale/hu-HU/locale.properties
+++ b/feedsidebar/chrome/locale/hu-HU/locale.properties
@@ -24,3 +24,5 @@ feedbar.siteLink=Oldal hivatkozása
 feedbar.publishedOn=Megjelent: %S a(z) <a href="%S">%S</a> oldalon.
 feedbar.previewHeader=A <a href="%S">%S</a> hírfolyamból
 feedbar.download=Letöltés
+feedbar.trendBookmarkTitle=Legfrissebb keresések
+feedbar.trendBookmarkDescription=A legfrissebb keresések a Twitteren, Diggrn és a többi közösségi oldalon.
