--- a/feedsidebar/chrome/locale/it-IT/locale.properties
+++ b/feedsidebar/chrome/locale/it-IT/locale.properties
@@ -1,4 +1,6 @@
 extensions.feedbar@efinke.com.description=Permette di mostrare i segnalibri Live nella barra laterale
+# Updating 1 of 10 (Joe's Blog)
+
 feedbar.statusText=Aggiornamento di %S feed su %S (%S) in corso…
 feedbar.noContent=il feed non contiene elementi
 feedbar.errors.unavailable=il feed non è disponibile
@@ -21,6 +23,18 @@ feedbar.workingOffline=Non in linea
 feedbar.permalink=Permalink
 feedbar.feedLink=Link del feed
 feedbar.siteLink=Link del sito web
+# First %S is a date.
+
+# Second %S is a URL
+
+# Third %S is the feed name
+
 feedbar.publishedOn=Pubblicato %S nel feed <a href="%S">%S</a>
+# First %S is a URL
+
+# Second %S is a feed name
+
 feedbar.previewHeader=Da <a href="%S">%S</a>
 feedbar.download=Scarica
+feedbar.trendBookmarkTitle=Ultime tendenze di ricerca sul web
+feedbar.trendBookmarkDescription=Ultime tendenze di ricerca su Twitter, Digg ed il resto delle reti sociali
