--- a/feedsidebar/chrome/locale/nl-NL/locale.properties
+++ b/feedsidebar/chrome/locale/nl-NL/locale.properties
@@ -24,3 +24,5 @@ feedbar.siteLink=Sitekoppeling
 feedbar.publishedOn=Gepubliceerd op %S in <a href="%S">%S</a>
 feedbar.previewHeader=Van <a href="%S">%S</a>
 feedbar.download=Downloaden
+feedbar.trendBookmarkTitle=Laatste trendzoektermen
+feedbar.trendBookmarkDescription=De laatste trendzoektermen op Twitter, Digg en de rest van het sociale web.
