--- a/feedsidebar/chrome/locale/pl-PL/locale.properties
+++ b/feedsidebar/chrome/locale/pl-PL/locale.properties
@@ -24,3 +24,5 @@ feedbar.siteLink=Odnośnik do witryny
 feedbar.publishedOn=Opublikowano dnia %S na <a href="%S">%S</a>
 feedbar.previewHeader=Z <a href="%S">%S</a>
 feedbar.download=Pobierz
+feedbar.trendBookmarkTitle=Ostatnio wyszukiwane zwroty
+feedbar.trendBookmarkDescription=Ostatnio wyszukiwane popularne zwroty na Twitterze, Diggu i innych portalach społecznościowych.
