--- a/feedsidebar/chrome/locale/ru-RU/locale.properties
+++ b/feedsidebar/chrome/locale/ru-RU/locale.properties
@@ -1,4 +1,6 @@
 extensions.feedbar@efinke.com.description=Показ Лент новостей в боковой панели
+feedbar.statusText=Обновление %S из %S (%S)...
+feedbar.noContent=Лента пуста.
 feedbar.errors.unavailable=Лента недоступна
 feedbar.errors.invalidFeed=Неправильный корневой элемент ленты
 feedbar.errors.noFeedsFound=Ленты не найдены.
@@ -21,3 +23,6 @@ feedbar.feedLink=Адрес ленты
 feedbar.siteLink=Адрес сайта
 feedbar.publishedOn=Опубликовано %S в <a href="%S">%S</a>
 feedbar.previewHeader=От <a href="%S">%S</a>
+feedbar.download=Скачать
+feedbar.trendBookmarkTitle=Последние новости лент соц.сетей
+feedbar.trendBookmarkDescription=Новости Twitter'а, Digg'а и других соц.сетей.
