--- a/feedsidebar/chrome/locale/sk-SK/locale.properties
+++ b/feedsidebar/chrome/locale/sk-SK/locale.properties
@@ -24,3 +24,5 @@ feedbar.siteLink=Odkaz stránky
 feedbar.publishedOn=Založený %S na <a href="%S">%S</a>
 feedbar.previewHeader=Od <a href="%S">%S</a>
 feedbar.download=Stiahnuť
+feedbar.trendBookmarkTitle=Posledné trendové vyhľadávacie výrazy
+feedbar.trendBookmarkDescription=Posledné trendové vyhľadávacie výrazy na Twistter, Digg, a zvyšných sociálnych weboch.
