--- a/feedsidebar/chrome/locale/zh-CN/locale.properties
+++ b/feedsidebar/chrome/locale/zh-CN/locale.properties
@@ -24,3 +24,5 @@ feedbar.siteLink=网站链接
 feedbar.publishedOn=<a href="%S">%S</a> 发布于 %S
 feedbar.previewHeader=来自 <a href="%S">%S</a>
 feedbar.download=下载
+feedbar.trendBookmarkTitle=最新热门主题
+feedbar.trendBookmarkDescription=Twitter, Digg等社交网站的最新热门主题
