--- a/feedsidebar/chrome/locale/es-ES/locale.properties
+++ b/feedsidebar/chrome/locale/es-ES/locale.properties
@@ -1,23 +1,28 @@
 extensions.feedbar@efinke.com.description=Muestra los elementos de los Marcadores dinámicos en la barra lateral
-feedbar.errors.unavailable=Suministro RSS no disponible
-feedbar.errors.invalidFeed=Suministro RSS no válido.
-feedbar.errors.noFeedsFound=No se han encontrado suministros RSS.
-feedbar.errors.noFeedsFoundMore=Suscribirse a un suministro RSS con la característica Marcadores dinámicos de Firefox para ver los elementos en la barra lateral.
+feedbar.statusText=Actualizando %S de %S (%S)...
+feedbar.noContent=Hilo sin contenido.
+feedbar.errors.unavailable=Hilo no disponible
+feedbar.errors.invalidFeed=Hilo no válido.
+feedbar.errors.noFeedsFound=No se han encontrado hilos.
+feedbar.errors.noFeedsFoundMore=Vincularse a un hilo con los Marcadores Dinámicos de Firefox para ver los hlos en la barra lateral.
 feedbar.errors.noFeedsFoundLabel=Más información
 feedbar.errors.noFeedsFoundKey=M
-feedbar.errors.couldNotUnsubscribe=Error: Feed Sidebar no pudo eliminar el suministro RSS de sus marcadores.
-feedbar.errors.parseError=Error leyendo el suministro RSS.
-feedbar.errors.invalidUrl=No es una URL de suministro RSS.
+feedbar.errors.couldNotUnsubscribe=Error: Feed Sidebar no pudo eliminar el hilo de sus marcadores.
+feedbar.errors.parseError=Error leyendo el hilo.
+feedbar.errors.invalidUrl=No es una URL de hilo.
 feedbar.noSummary=No se ha proporcionado resumen.
-feedbar.warnOnTabs=Avisarme cuando se abran varias pestañas que puedan enlentecer el navegador
-feedbar.warnOnTabsMessage=Está apunto de abrir %S pestañas. Esto puede enlentecer el navegador mientras se cargan las páginas. ¿Quiere continuar?
-feedbar.confirmOpenInTabs=Confirmar abrir
+feedbar.warnOnTabs=Avisarme cuando el abrir varias pestañas pueda disminuir la velocidad del navegador
+feedbar.warnOnTabsMessage=Está apunto de abrir %S pestañas. Esto podría disminuir la velocidad del navegador mientras cargan las páginas. ¿Desea continuar?
+feedbar.confirmOpenInTabs=Confirmar Abrir
 feedbar.openConfirmText=Abrir pestañas
-feedbar.newItemBody=Tiene un nuevo elemento de suministro RSS.
-feedbar.newItemsBody=Tiene %S nuevos elementos de suministros RSS.
+feedbar.newItemBody=Un nuevo elemento
+feedbar.newItemsBody=%S nuevos elementos
 feedbar.workingOffline=Trabajar sin conexión
 feedbar.permalink=Permalink
-feedbar.feedLink=Enlace de suministro RSS
-feedbar.siteLink=Enlace de sitio web
+feedbar.feedLink=Enlace a Hilo
+feedbar.siteLink=Enlace a Sitio
 feedbar.publishedOn=Publicado el %S en <a href="%S">%S</a>
 feedbar.previewHeader=De <a href="%S">%S</a>
+feedbar.download=Descargar
+feedbar.trendBookmarkTitle=Últimos términos en tendencias de búsqueda
+feedbar.trendBookmarkDescription=Los últimos términos en tendencias de búsqueda de Twitter, Digg y el resto de redes sociales.
