--- a/feedsidebar/chrome/locale/ja-JP/locale.properties
+++ b/feedsidebar/chrome/locale/ja-JP/locale.properties
@@ -1,4 +1,6 @@
 extensions.feedbar@efinke.com.description=ライブブックマークの項目をサイドバーに表示します。
+feedbar.statusText=更新中 %S / %S (%S)...
+feedbar.noContent=フィードの内容がありません。
 feedbar.errors.unavailable=フィードが利用できません
 feedbar.errors.invalidFeed=無効なフィードです。
 feedbar.errors.noFeedsFound=フィードが見つかりませんでした。
@@ -22,3 +24,5 @@ feedbar.siteLink=サイトリンク
 feedbar.publishedOn=%S 公開 (<a href="%S">%S</a>)
 feedbar.previewHeader=<a href="%S">%S</a> より
 feedbar.download=ダウンロード
+feedbar.trendBookmarkTitle=最新のトレンド検索語
+feedbar.trendBookmarkDescription=Twitter や Digg、他のソーシャル Web での最新トレンド検索語です。
