--- a/feedsidebar/chrome/locale/nl-NL/locale.properties
+++ b/feedsidebar/chrome/locale/nl-NL/locale.properties
@@ -15,8 +15,8 @@ feedbar.warnOnTabs=Mij waarschuwen wanneer het openen van meerdere tabbladen de 
 feedbar.warnOnTabsMessage=U staat op het punt om %S tabbladen te openen. Dit kan de browser vertragen terwijl de pagina's worden geladen. Weet u zeker dat u wilt doorgaan?
 feedbar.confirmOpenInTabs=Openen bevestigen
 feedbar.openConfirmText=Tabbladen openen
-feedbar.newItemBody=U hebt een nieuw feedbericht
-feedbar.newItemsBody=U hebt %S nieuwe feedberichten
+feedbar.newItemBody=Eén nieuw feedbericht
+feedbar.newItemsBody=%S nieuwe feedberichten
 feedbar.workingOffline=Offline werken
 feedbar.permalink=Permalink
 feedbar.feedLink=Feedkoppeling
