--- a/feedsidebar/chrome/locale/en-US/locale.dtd
+++ b/feedsidebar/chrome/locale/en-US/locale.dtd
@@ -64,9 +64,9 @@
 
 <!ENTITY feedbar.updatesDisabled "Disable Auto-Updates">
 
-<!ENTITY feedbar.trendsTitle "Real-time Web Trends">
-<!ENTITY feedbar.trendsP1 "Feed Sidebar wants to know if you'd like to subscribe to a feed of the latest trending search terms on Twitter, Digg, and the rest of the social Web.">
-<!ENTITY feedbar.trendsP2 "Click OK to subscribe to the feed; it will automatically appear in the sidebar, keeping you up-to-date on the latest news and trends from around the Web.  (You can unsubscribe at any time.)">
+<!ENTITY feedbar.trendsTitle "Real-time Trending News">
+<!ENTITY feedbar.trendsP1 "Feed Sidebar wants to know if you'd like to subscribe to a feed of the latest trending news stories.">
+<!ENTITY feedbar.trendsP2 "Click OK to subscribe; the feed will automatically appear in the sidebar, keeping you up-to-date on the latest news and trends from around the Web.">
 <!ENTITY feedbar.trendsP3 "Don't worry, you won't be asked again if you choose not to subscribe.">
 
 <!ENTITY feedbar.checkbox_understand "Yes, I want to subscribe to a feed of trending social topics.">
