Localized featured feeds, fixed folder icons on Win

--- a/feedsidebar/chrome/locale/en-US/locale.dtd
+++ b/feedsidebar/chrome/locale/en-US/locale.dtd
@@ -63,3 +63,12 @@
 <!ENTITY feedbar.alwaysOpenInNewTab "Always open items in new tabs">
 
 <!ENTITY feedbar.updatesDisabled "Disable Auto-Updates">
+
+<!ENTITY feedbar.options.general "General">
+<!ENTITY feedbar.featured.subscribe "Subscribe">
+<!ENTITY feedbar.featured.panelTitle "Featured Feeds">
+<!ENTITY feedbar.featured.description "Support Feed Sidebar's development without spending a cent by trying out some of these feeds from the Friends of Feed Sidebar.">
+<!ENTITY feedbar.featured.contact "(If you'd like to see your feed in this list, e-mail cfinke@gmail.com.)">
+<!ENTITY feedbar.featured.trends.title "Trending News">
+<!ENTITY feedbar.featured.trends.description "A feed of the latest popular and trending news stories.">
+<!ENTITY feedbar.featured.notifyMe "Periodically notify me about new featured feeds.">
