--- a/feedsidebar/chrome/locale/en-US/locale.properties
+++ b/feedsidebar/chrome/locale/en-US/locale.properties
@@ -13,6 +13,8 @@ feedbar.errors.noFeedsFoundKey=M
 feedbar.errors.parseError=Error parsing feed.
 feedbar.errors.invalidUrl=Not a feed URL.
 feedbar.errors.invalidFeed=Invalid feed.
+feedbar.errors.viewFeed=View feed
+feedbar.errors.viewFeed.key=V
 
 feedbar.noSummary=No summary provided.
 feedbar.warnOnTabs=Warn me when opening multiple tabs might slow down the browser
@@ -38,3 +40,9 @@ feedbar.publishedOn=Published on %S in <a href="%S">%S</a>
 feedbar.previewHeader=From <a href="%S">%S</a>
 
 feedbar.download=Download
+
+feedbar.featured.unsubscribe=Unsubscribe
+feedbar.featured.subscribe=Subscribe
+feedbar.featured.notification=Support Feed Sidebar's development by trying out some of these new featured feeds.
+feedbar.featured.okLabel=Sure!
+feedbar.featured.okKey=S
